code-blocks-server/code-blocks/tests/tsx/snapshots/tsx__get_query_subtrees.snap
---
source: code-blocks/tests/tsx/main.rs
expression: blocks
---
- "export default function App() {\n      return (\n          <div>\n            <button className=\"card\" onClick={readFile}>\n              Choose file\n            </button>\n            <button className=\"card\" onClick={() => writeFile(filePath, content)}>\n              Write file\n            </button>\n          </div>\n      );\n    }"
- "function App() {\n      return (\n          <div>\n            <button className=\"card\" onClick={readFile}>\n              Choose file\n            </button>\n            <button className=\"card\" onClick={() => writeFile(filePath, content)}>\n              Write file\n            </button>\n          </div>\n      );\n    }"
- "<div>\n            <button className=\"card\" onClick={readFile}>\n              Choose file\n            </button>\n            <button className=\"card\" onClick={() => writeFile(filePath, content)}>\n              Write file\n            </button>\n          </div>"
- "<button className=\"card\" onClick={readFile}>\n              Choose file\n            </button>"
- "<button className=\"card\" onClick={() => writeFile(filePath, content)}>\n              Write file\n            </button>"

