code-blocks-server/code-blocks/tests/tsx/snapshots/tsx__move_block.snap
---
source: code-blocks/tests/tsx/main.rs
expression: snapshot
---
input:

    export default function App() {
        return (
            <>
              <button> {/* src */}
                Choose file
              </button>!!! stuff in here is also part of the syntax tree !!!
              <button> {/* dst */}
                Write file
              </button>!!! stuff in here is also part of the syntax tree !!!
            </>
          );
    }

---
output:

    export default function App() {
        return (
            <>
              !!! stuff in here is also part of the syntax tree !!!
              <button> {/* dst */}
              ^ Dest
                Write file
              </button><button> {/* src */}
                       ^ Source
                Choose file
              </button>!!! stuff in here is also part of the syntax tree !!!
            </>
          );
    }
