code-blocks-server/code-blocks/tests/tsx/snapshots/tsx__move_block_outside_scope.snap
---
source: code-blocks/tests/tsx/main.rs
expression: snapshot
---
input:

    export default function App() {
        return (
            <>
              <div>
                <button>
            {/* ^src */}
                  Choose file
                </button>!!! stuff in here is also part of the syntax tree !!!
              </div>
              <button>
          {/* ^dst */}
                Write file
              </button>!!! stuff in here is also part of the syntax tree !!!
            </>
          );
    }

---
output:

    export default function App() {
        return (
            <>
              <div>
                !!! stuff in here is also part of the syntax tree !!!
              </div>
              <button>
              ^ Dest
          {/* ^dst */}
                Write file
              </button><button>
                       ^ Source
            {/* ^src */}
                  Choose file
                </button>!!! stuff in here is also part of the syntax tree !!!
            </>
          );
    }
